# hx_exp

./: .gitignore  README.md
catkin_ws/src/: README.md  USAGE_GUIDE.md
catkin_ws/src/airsim_env/LinuxNoEditor/: Manifest_NonUFSFiles_Linux.txt
catkin_ws/src/airsim_env/LinuxNoEditor/Blocks/Content/JsonFiles/: EnvGenConfig.json  EnvGenConfig.json.backup
catkin_ws/src/airsim_env/LinuxNoEditor/Blocks/Saved/Config/LinuxNoEditor/: GameUserSettings.ini
catkin_ws/src/hx_demo/: CMakeLists.txt  package.xml
catkin_ws/src/hx_demo/config/: ground_effect_scenarios.yaml
catkin_ws/src/hx_demo/ground_effect_data/: ADRC_ground_effect_test.csv  PID_ground_effect_test.csv  UDE_ground_effect_test.csv  detailed_analysis_report.txt  ground_effect_analysis.eps  ground_effect_report.txt  visualize_ground_effect.py
catkin_ws/src/hx_demo/launch/: circle_trajectory.launch
catkin_ws/src/hx_demo/scripts/: analyze_ground_effect.py  simple_ground_effect_test.py
catkin_ws/src/hx_demo/src/: basic_position_control.cpp  circle_trajectory.cpp  ground_effect_experiment.cpp
catkin_ws/src/hx_msgs/: CMakeLists.txt
catkin_ws/src/hx_msgs/msg/: TrajectoryPoint.msg  UAVCommand.msg
catkin_ws/src/hx_msgs/srv/: UAVService.srv
catkin_ws/src/hx_uav_control/: CMakeLists.txt
catkin_ws/src/hx_uav_control/config/: hx_controller_params.yaml
catkin_ws/src/hx_uav_control/include/hx_uav_control/: hx_airsim_interface.h  hx_uav_controller.h
catkin_ws/src/hx_uav_control/include/hx_uav_control/Position_Controller/: geometry_utils.h  pos_controller_ADRC.h  pos_controller_UDE.h
catkin_ws/src/hx_uav_control/scripts/: final_simple_bridge.py  http_airsim_bridge.py  hx_airsim_interface_python.py  real_airsim_bridge.py  simple_airsim_bridge.py  simple_tcp_bridge.py
catkin_ws/src/hx_uav_control/src/: hx_uav_controller.cpp
catkin_ws/src/hx_uav_control/src/utils/: hx_command_pub.cpp
catkin_ws/src/launch/: hx_complete_system.launch
catkin_ws/src/scripts/: start_airsim.sh
reference/: README.md
reference/tutorial_demo/: CMakeLists.txt
reference/tutorial_demo/basic/circular_trajectory_control/src/: circular_trajectory_control.cpp
reference/uav_control/: CMakeLists.txt
reference/uav_control/include/: uav_controller.h
reference/uav_control/include/Filter/: LowPassFilter.h
reference/uav_control/include/Position_Controller/: controller_utils.h  geometry_utils.h  pos_controller_ADRC.h
reference/uav_control/launch/: uav_control_outdoor.yaml
reference/uav_control/src/: uav_controller.cpp
src/hx_exp_py/: README.md
src/hx_exp_py/airsim_env/: settings.json
src/hx_exp_py/airsim_env/LinuxNoEditor/: Blocks.sh
src/hx_exp_py/airsim_env/LinuxNoEditor/Blocks/Saved/Config/LinuxNoEditor/: Engine.ini
src/hx_exp_py/airsim_env/LinuxNoEditor/Blocks/Saved/Crashes/crashinfo-Blocks-pid-1110427-A865DB5F2FFD4AF992B36BC9EE3B899E/: CrashContext.runtime-xml  Diagnostics.txt
src/hx_exp_py/airsim_env/LinuxNoEditor/Blocks/Saved/Crashes/crashinfo-Blocks-pid-1174992-BAA0BCD1E34343BA96EDC38452DFD22D/: CrashContext.runtime-xml  Diagnostics.txt
src/hx_exp_py/airsim_env/LinuxNoEditor/Blocks/Saved/Crashes/crashinfo-Blocks-pid-942596-07C9D10F343D48FB90DDFC0E612F13CE/: CrashContext.runtime-xml  Diagnostics.txt
src/hx_exp_py/airsim_env/LinuxNoEditor/Blocks/Saved/Crashes/crashinfo-Blocks-pid-945692-EF08DA2237054E818C21296A37986529/: CrashContext.runtime-xml
src/hx_exp_py/airsim_env/LinuxNoEditor/Blocks/Saved/Crashes/crashinfo-Blocks-pid-946260-B585F29FF820456FACDCBDF796ABC3DE/: CrashContext.runtime-xml
src/hx_exp_py/airsim_env/LinuxNoEditor/Blocks/Saved/Crashes/crashinfo-Blocks-pid-947457-26001A83C718408195852D2833924982/: CrashContext.runtime-xml
src/hx_exp_py/config/: hx_controller_params.yaml
src/hx_exp_py/python_enhanced/: algorithm_verification_test.py  controller_comparison.py  demo_complete_system.py  demo_summary.py  hx_airsim_controller.py  keyboard_control.py  simple_controller_test.py  test_hx_controller.py
src/hx_exp_py/python_enhanced/controllers/: adrc_controller.py  base_controller.py  pid_controller.py  ude_controller.py
src/hx_exp_py/scripts/: hx_airsim_python_demo.py  simple_airsim_test.py  start_airsim.sh
src/hx_exp_rc/: README.md
src/hx_exp_rc/airsim_env/: settings.json
src/hx_exp_rc/airsim_env/LinuxNoEditor/: Blocks.sh  Blocks_windowed.sh
src/hx_exp_rc/hx_demo/: CMakeLists.txt  GROUND_EFFECT_EXPERIMENT.md
src/hx_exp_rc/hx_demo/launch/: basic_position_control.launch  ground_effect_experiment.launch
src/hx_exp_rc/hx_demo/scripts/: ground_effect_experiment.py  takeoff_land_demo.py
src/hx_exp_rc/hx_msgs/: package.xml
src/hx_exp_rc/hx_msgs/msg/: AirSimState.msg  ControllerOutput.msg  DetectionInfo.msg  UAVControlState.msg  UAVState.msg
src/hx_exp_rc/hx_uav_control/: CMakeLists.txt  package.xml
src/hx_exp_rc/hx_uav_control/include/hx_uav_control/: hx_uav_controller.h
src/hx_exp_rc/hx_uav_control/include/hx_uav_control/Position_Controller/: controller_utils.h  math_utils.h  pos_controller_PID.h  printf_utils.h
src/hx_exp_rc/hx_uav_control/launch/: hx_multi_uav.launch  hx_uav_control_main.launch
src/hx_exp_rc/hx_uav_control/src/: hx_airsim_interface.cpp  hx_airsim_interface_node.cpp  hx_uav_control_node.cpp
